complete check card method

--- a/game_design_client.kv
+++ b/game_design_client.kv
@@ -46,7 +46,7 @@ BoxLayout:
                 id: player4
                 size_hint_y: 0.4
         Button:
-            text: "block information"
+            text: "MENU"
             on_press: app.switch_player()
             font_size: 50
     BoxLayout:
@@ -113,7 +113,7 @@ BoxLayout:
         BoxLayout:
             orientation: "vertical"
             BoxLayout:
-                orientation: "vertical"
+
                 id: equipments
             BoxLayout:
                 BoxLayout:
