Add withdraw_discard method

--- a/game_design_client.kv
+++ b/game_design_client.kv
@@ -109,6 +109,10 @@ BoxLayout:
                         text: "Check Card"
                         on_press: app.activate_check_card()
                         font_size: 30
+                    Button:
+                        text: "Withdraw Discard"
+                        on_press: app.withdraw_discard()
+                        font_size: 30
 
         BoxLayout:
             orientation: "vertical"
